--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -24,16 +24,16 @@ bin_PROGRAMS =
 include_HEADERS =
 lib_LTLIBRARIES =
 
-libtromino_la_SOURCES = tromino_core/tromino.c
+libtromino_la_SOURCES = core/tromino.c
 libtromino_la_CPPFLAGS = \
-	-I$(top_srcdir)/include/tromino_core
-include_HEADERS += $(top_srcdir)/include/tromino_core/tromino.h
+	-I$(top_srcdir)/include/tromino/core
+include_HEADERS += $(top_srcdir)/include/tromino/core/tromino.h
 lib_LTLIBRARIES += libtromino.la
 
-libtromino_validation_la_SOURCES = tromino_validation/tromino_validation.c
+libtromino_validation_la_SOURCES = validation/validation.c
 libtromino_validation_la_CPPFLAGS = \
-	-I$(top_srcdir)/include/tromino_validation
-include_HEADERS += $(top_srcdir)/include/tromino_validation/tromino_validation.h
+	-I$(top_srcdir)/include/tromino/validation
+include_HEADERS += $(top_srcdir)/include/tromino/validation/validation.h
 lib_LTLIBRARIES += libtromino-validation.la
 
 tromino_SOURCES = \
@@ -50,31 +50,30 @@ tromino_SOURCES = \
 	cli/wrapper.cpp \
 	cli/wrapper.hpp
 tromino_CPPFLAGS = \
-	-I$(top_srcdir)/include/tromino_core \
-	-I$(top_srcdir)/include/tromino_validation
+	-I$(top_srcdir)/include
 tromino_LDADD = \
 	libtromino.la \
 	libtromino-validation.la
 bin_PROGRAMS += tromino
 
 libtromino_gfx2d_la_SOURCES = \
-	gfx2d/tromino_gfx2d.cpp \
+	gfx2d/gfx2d.cpp \
 	gfx2d/view_model.cpp \
 	gfx2d/window.cpp
 libtromino_gfx2d_la_CPPFLAGS = \
 	-I/usr/include/SDL2 \
-	-I$(top_srcdir)/include/tromino_core \
-	-I$(top_srcdir)/include/gfx2d
+	-I$(top_srcdir)/include \
+	-I$(top_srcdir)/include/tromino/gfx2d
 libtromino_gfx2d_la_LDFLAGS = \
 	$(AM_LDFLAGS) \
 	-lSDL2
 include_HEADERS += \
-	$(top_srcdir)/include/gfx2d/board.hpp \
-	$(top_srcdir)/include/gfx2d/step.hpp \
-	$(top_srcdir)/include/gfx2d/style.hpp \
-	$(top_srcdir)/include/gfx2d/tromino_gfx2d.hpp \
-	$(top_srcdir)/include/gfx2d/view_model.hpp \
-	$(top_srcdir)/include/gfx2d/window.hpp
+	$(top_srcdir)/include/tromino/gfx2d/board.hpp \
+	$(top_srcdir)/include/tromino/gfx2d/gfx2d.hpp \
+	$(top_srcdir)/include/tromino/gfx2d/step.hpp \
+	$(top_srcdir)/include/tromino/gfx2d/style.hpp \
+	$(top_srcdir)/include/tromino/gfx2d/view_model.hpp \
+	$(top_srcdir)/include/tromino/gfx2d/window.hpp
 lib_LTLIBRARIES += libtromino-gfx2d.la
 
 tromino2d_SOURCES = \
@@ -89,9 +88,7 @@ tromino2d_SOURCES = \
 	gui/params.hpp
 tromino2d_CPPFLAGS = \
 	-I/usr/include/SDL2 \
-	-I$(top_srcdir)/include/tromino_core \
-	-I$(top_srcdir)/include/gfx2d \
-	-I$(top_srcdir)/include/tromino_validation
+	-I$(top_srcdir)/include
 tromino2d_LDFLAGS = \
 	$(AM_LDFLAGS) \
 	-lpthread \
