--- a/msbuild/LibTromino.Test/LibTromino.Test.vcxproj
+++ b/msbuild/LibTromino.Test/LibTromino.Test.vcxproj
@@ -11,11 +11,11 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\test\tromino_core\testmain_libtromino.cpp" />
-    <ClCompile Include="..\..\test\tromino_core\tromino_2x2_unittest.cpp" />
-    <ClCompile Include="..\..\test\tromino_core\tromino_4x4_unittest.cpp" />
-    <ClCompile Include="..\..\test\tromino_core\tromino_64x64_unittest.cpp" />
-    <ClCompile Include="..\..\test\tromino_core\unittest_helper.cpp" />
+    <ClCompile Include="..\..\test\main.cpp" />
+    <ClCompile Include="..\..\test\core\tromino_2x2_unittest.cpp" />
+    <ClCompile Include="..\..\test\core\tromino_4x4_unittest.cpp" />
+    <ClCompile Include="..\..\test\core\tromino_64x64_unittest.cpp" />
+    <ClCompile Include="..\..\test\core\unittest_helper.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\libtromino\libtromino.vcxproj">
@@ -23,7 +23,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\test\tromino_core\unittest_helper.hpp" />
+    <ClInclude Include="..\..\test\core\unittest_helper.hpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
@@ -73,7 +73,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)\..\include\tromino_core;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)\..\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
     </ClCompile>
@@ -90,7 +90,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)\..\include\tromino_core;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)\..\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
     </ClCompile>
