--- a/msbuild/LibTromino2d/LibTromino2d.vcxproj.filters
+++ b/msbuild/LibTromino2d/LibTromino2d.vcxproj.filters
@@ -15,27 +15,27 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\include\gfx2d\board.hpp">
+    <ClInclude Include="..\..\include\tromino\gfx2d\board.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\include\gfx2d\step.hpp">
+    <ClInclude Include="..\..\include\tromino\gfx2d\gfx2d.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\include\gfx2d\style.hpp">
+    <ClInclude Include="..\..\include\tromino\gfx2d\step.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\include\gfx2d\tromino_gfx2d.hpp">
+    <ClInclude Include="..\..\include\tromino\gfx2d\style.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\include\gfx2d\view_model.hpp">
+    <ClInclude Include="..\..\include\tromino\gfx2d\view_model.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\include\gfx2d\window.hpp">
+    <ClInclude Include="..\..\include\tromino\gfx2d\window.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\src\gfx2d\tromino_gfx2d.cpp">
+    <ClCompile Include="..\..\src\gfx2d\gfx2d.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\gfx2d\view_model.cpp">
