--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -76,6 +76,7 @@ jobs:
           -maxCpuCount
           -property:Configuration=${{ env.BUILD_CONFIGURATION }}
           -property:Platform=${{ env.BUILD_PLATFORM }}
+          -property:Tromino2dDefinitions="TROMINO_2D_HEADLESS"
           -validate
           -warnAsError
           "${{ env.SOLUTION_FILE_PATH }}"
@@ -89,4 +90,102 @@ jobs:
           Get-FileHash libtromino_validation.lib -Algorithm SHA256
           Get-FileHash libtromino.lib -Algorithm SHA256
           Get-FileHash libtromino2d.lib -Algorithm SHA256
+        working-directory: ${{ github.workspace }}\msbuild\x64\Release\
+
+      # LibTromino.Test.exe
+
+      - name: Run unit tests
+        run: |-
+          .\LibTromino.Test.exe
+        shell: cmd
+        working-directory: ${{ github.workspace }}\msbuild\x64\Release\
+
+      # tromino.exe VT-100 mode
+
+      - name: Run tromino
+        run: |-
+          .\tromino.exe 2> nul && (exit /b 1) || (exit /b 0)
+        shell: cmd
+        working-directory: ${{ github.workspace }}\msbuild\x64\Release\
+
+      - name: Run tromino 5 0 0
+        run: |-
+          tromino.exe 5 0 0 2> nul && (exit /b 1) || (exit /b 0)
+        shell: cmd
+        working-directory: ${{ github.workspace }}\msbuild\x64\Release\
+
+      - name: Run tromino 2 0 7
+        run: |-
+          tromino.exe 2 0 7 2> nul && (exit /b 1) || (exit /b 0)
+        shell: cmd
+        working-directory: ${{ github.workspace }}\msbuild\x64\Release\
+
+      - name: Run tromino 2 0 1
+        run: |-
+          tromino.exe 2 0 1
+        shell: cmd
+        working-directory: ${{ github.workspace }}\msbuild\x64\Release\
+
+      - name: Run tromino 8 3 5
+        run: |-
+          tromino.exe 8 3 5
+        shell: cmd
+        working-directory: ${{ github.workspace }}\msbuild\x64\Release\
+
+      # tromino.exe Windows Console Host (WCH) mode
+
+      - name: Run tromino --use-wch
+        run: |-
+          .\tromino.exe --use-wch 2> nul && (exit /b 1) || (exit /b 0)
+        shell: cmd
+        working-directory: ${{ github.workspace }}\msbuild\x64\Release\
+
+      - name: Run tromino 5 0 0 --use-wch
+        run: |-
+          tromino.exe 5 0 0 --use-wch 2> nul && (exit /b 1) || (exit /b 0)
+        shell: cmd
+        working-directory: ${{ github.workspace }}\msbuild\x64\Release\
+
+      - name: Run tromino 2 0 7 --use-wch
+        run: |-
+          tromino.exe 2 0 7 --use-wch 2> nul && (exit /b 1) || (exit /b 0)
+        shell: cmd
+        working-directory: ${{ github.workspace }}\msbuild\x64\Release\
+
+      - name: Run tromino 2 0 1 --use-wch
+        run: |-
+          tromino.exe 2 0 1 --use-wch
+        shell: cmd
+        working-directory: ${{ github.workspace }}\msbuild\x64\Release\
+
+      - name: Run tromino 8 3 5 --use-wch
+        run: |-
+          tromino.exe 8 3 5 --use-wch
+        shell: cmd
+        working-directory: ${{ github.workspace }}\msbuild\x64\Release\
+
+      # tromino2d.exe
+
+      - name: Run tromino2d
+        run: |-
+          tromino2d.exe 2> nul && (exit /b 1) || (exit /b 0)
+        shell: cmd
+        working-directory: ${{ github.workspace }}\msbuild\x64\Release\
+
+      - name: Run tromino2d 5 0 0
+        run: |-
+          tromino2d.exe 5 0 0 2> nul && (exit /b 1) || (exit /b 0)
+        shell: cmd
+        working-directory: ${{ github.workspace }}\msbuild\x64\Release\
+
+      - name: Run tromino2d 1024 0 0
+        run: |-
+          tromino2d.exe 1024 0 0 2> nul && (exit /b 1) || (exit /b 0)
+        shell: cmd
+        working-directory: ${{ github.workspace }}\msbuild\x64\Release\
+
+      - name: Run tromino2d 4 0 0
+        run: |-
+          tromino2d.exe 4 0 0
+        shell: cmd
         working-directory: ${{ github.workspace }}\msbuild\x64\Release\
