--- a/msbuild/LibTromino.Test/LibTromino.Test.vcxproj.filters
+++ b/msbuild/LibTromino.Test/LibTromino.Test.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="..\..\test\core\tromino_64x64_unittest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\test\core\tromino_stop_flag.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="..\..\test\core\unittest_helper.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
