--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,8 +7,8 @@ resources:
   repositories:
     - repository: vcpkg
       type: github
-      endpoint: oboukli
       name: microsoft/vcpkg
+      endpoint: oboukli
 
 jobs:
   - job: macOS
@@ -36,14 +36,32 @@ jobs:
     pool:
       vmImage: windows-latest
     variables:
-      primaryRepository: tromino-puzzle
+      - name: primaryRepository
+        value: tromino-puzzle
+      - name: binariesDir
+        value: $(Agent.TempDirectory)\vcpkg_artifacts
+      - name: VCPKG_BINARY_SOURCES
+        value: clear;files,$(binariesDir),readwrite
     steps:
       - checkout: self
         displayName: Check out primary repository
 
+      - script: mkdir $(binariesDir)
+        displayName: Create Vcpkg binary sources directory
+
       - checkout: vcpkg
-        path: s/$(primaryRepository)/vcpkg
+        path: s\$(primaryRepository)\vcpkg
         displayName: Check out vcpkg repository
+
+      - task: Cache@2
+        inputs:
+          key: >-
+            "vcpkg"
+            | "$(Agent.OS)"
+            | $(primaryRepository)\vcpkg\ports\boost-test\vcpkg.json
+            | $(primaryRepository)\vcpkg\ports\sdl2\vcpkg.json
+          path: $(binariesDir)
+        displayName: Apply vcpkg cache
 
       - task: BatchScript@1
         displayName: Bootstrap vcpkg
@@ -51,22 +69,22 @@ jobs:
           filename: $(primaryRepository)\vcpkg\bootstrap-vcpkg.bat
           arguments: -disableMetrics
 
-      - script: vcpkg install --triplet x64-windows boost-test
-        displayName: Install Boost.Test vcpkg package
-        workingDirectory: $(primaryRepository)/vcpkg
-
-      - script: vcpkg install --triplet x64-windows sdl2
-        displayName: Install SDL2 vcpkg package
-        workingDirectory: $(primaryRepository)/vcpkg
-
-      - script: vcpkg integrate install
+      - script: vcpkg\vcpkg integrate install
         displayName: Integrate vcpkg
-        workingDirectory: $(primaryRepository)/vcpkg
+        workingDirectory: $(primaryRepository)
+
+      - script: vcpkg\vcpkg install --triplet x64-windows boost-test
+        displayName: Install Boost.Test vcpkg package
+        workingDirectory: $(primaryRepository)
+
+      - script: vcpkg\vcpkg install --triplet x64-windows sdl2
+        displayName: Install SDL2 vcpkg package
+        workingDirectory: $(primaryRepository)
 
       - task: VSBuild@1
         displayName: Build
         inputs:
-          solution: $(primaryRepository)/msbuild/TrominoPuzzle.sln
+          solution: $(primaryRepository)\msbuild\TrominoPuzzle.sln
           platform: x64
           configuration: Release
           maximumCpuCount: true
