ci(GitHub Actions): Reset top-level permissions

--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -15,8 +15,7 @@ on:
       - main
   workflow_dispatch:
 
-permissions:
-  contents: read
+permissions: {}
 
 env:
   SOLUTION_FILE_PATH: msbuild\TrominoPuzzle.sln
