--- a/msbuild/libtromino_validation/libtromino_validation.vcxproj
+++ b/msbuild/libtromino_validation/libtromino_validation.vcxproj
@@ -16,6 +16,7 @@
     <ProjectGuid>{7f327585-53de-4F6B-919b-1244189b2d40}</ProjectGuid>
     <RootNamespace>libtromino_validation</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <DisableLanguageExtensions>true</DisableLanguageExtensions>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
