--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -4,11 +4,18 @@
 
 # SPDX-License-Identifier: MIT
 
+AM_CPPFLAGS =
+AM_CFLAGS = \
+	-std=c99
+AM_CXXFLAGS = \
+	-std=c++20
+AM_LDFLAGS =
+
 if CODE_COVERAGE_ENABLED
-AM_CPPFLAGS = $(CODE_COVERAGE_CPPFLAGS)
-AM_CFLAGS = $(CODE_COVERAGE_CFLAGS)
-AM_CXXFLAGS = $(CODE_COVERAGE_CXXFLAGS)
-AM_LDFLAGS = $(CODE_COVERAGE_LIBS)
+AM_CPPFLAGS += $(CODE_COVERAGE_CPPFLAGS)
+AM_CFLAGS += $(CODE_COVERAGE_CFLAGS)
+AM_CXXFLAGS += $(CODE_COVERAGE_CXXFLAGS)
+AM_LDFLAGS += $(CODE_COVERAGE_LIBS)
 endif
 
 check_PROGRAMS = libtromino_test
