build(Automake): Add GNU LD flags

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -32,9 +32,13 @@ AM_CXXFLAGS = \
 	-Wunused \
 	-Wuseless-cast
 AM_LDFLAGS = \
-	-Wl,--fatal-warnings \
 	-no-undefined \
-	-Wl,--warn-common
+	-version-info $(LIBTROMINO_CURRENT):$(LIBTROMINO_REVISION):$(LIBTROMINO_AGE) \
+	-Wl,--fatal-warnings \
+	-Wl,--no-undefined \
+	-Wl,--warn-alternate-em \
+	-Wl,--warn-common \
+	-Wl,--warn-unresolved-symbols
 
 if CODE_COVERAGE_ENABLED
 AM_CPPFLAGS += $(CODE_COVERAGE_CPPFLAGS)
